[gd_scene load_steps=4 format=2]

[ext_resource path="res://themes/Default/default.tres" type="Theme" id=1]
[ext_resource path="res://gui/QuitScreen/QuitConfirmDialog.gd" type="Script" id=2]
[ext_resource path="res://gui/QuitScreen/QuitScreen.gd" type="Script" id=3]

[node name="QuitScreen" type="Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="QuitConfirmDialog" type="AcceptDialog" parent="."]
visible = true
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource( 1 )
window_title = ""
resizable = true
dialog_text = "Are you sure you want to quit?"
dialog_hide_on_ok = false
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="visibility_changed" from="." to="." method="_on_visibility_changed"]
[connection signal="confirmed" from="QuitConfirmDialog" to="." method="_on_confirmed"]
[connection signal="popup_hide" from="QuitConfirmDialog" to="." method="_on_popup_hide"]
